added deploy file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,15 @@ jobs:
               cd $APP_DIR
               git pull origin main
             fi
+
+            # Ensure npm dependencies and pm2 are installed
             npm install
             npm run build
+            if ! command -v pm2 &> /dev/null; then
+              npm install -g pm2
+            fi
+            
+            # Restart or start the app with pm2
             pm2 restart ci_cd_app || pm2 start dist/main.js --name ci_cd_app
           "
         shell: bash
