--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Ensures compatibility with dependencies
+          node-version: '18'
 
       - name: Configure SSH Key
         run: |
@@ -43,14 +43,12 @@ jobs:
               git pull origin main
             fi
 
-            # Ensure npm dependencies and pm2 are installed
             npm install
             npm run build
             if ! command -v pm2 &> /dev/null; then
               npm install -g pm2
             fi
             
-            # Restart or start the app with pm2
             pm2 restart ci_cd_app || pm2 start dist/main.js --name ci_cd_app
           "
         shell: bash
